feat: add transactional sqlite persistence for p0-4

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,18 @@ INTERNAL_API_ALLOWED_SERVICES=relayer,prover,e2e
 # In production, set a specific origin instead of '*'.
 CORS_ALLOW_ORIGIN=*
 
+# Persistence backends for P0-4 durability rollout.
+# Indexer: json (legacy) or sqlite (transactional).
+INDEXER_DB_KIND=json
+# INDEXER_DB_PATH=/abs/path/indexer.db
+
+# Prover queue/state: json (legacy) or sqlite (transactional).
+PROVER_STORE_KIND=json
+# PROVER_DB_PATH=/abs/path/prover.db
+# Legacy JSON paths (used when PROVER_STORE_KIND=json):
+# PROVER_QUEUE_PATH=/abs/path/prover-queue.json
+# PROVER_STATE_PATH=/abs/path/prover-state.json
+
 NEXT_PUBLIC_HUB_RPC_URL=http://127.0.0.1:8545
 NEXT_PUBLIC_SPOKE_RPC_URL=http://127.0.0.1:9545
 NEXT_PUBLIC_HUB_CHAIN_ID=8453
