--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,16 @@
-# Hub (Base)
-HUB_CHAIN_ID=8453
+# Hub (Ethereum mainnet)
+HUB_CHAIN_ID=1
 HUB_RPC_URL=http://127.0.0.1:8545
 # Optional admin RPC for tenderly_setBalance in fork E2E.
 # HUB_ADMIN_RPC_URL=
 
 # Active spoke selector.
-SPOKE_NETWORK=worldchain
+SPOKE_NETWORK=base
 
 # Spoke network catalog
-SPOKE_WORLDCHAIN_CHAIN_ID=480
-SPOKE_WORLDCHAIN_RPC_URL=http://127.0.0.1:9545
-SPOKE_WORLDCHAIN_ADMIN_RPC_URL=
-SPOKE_ETHEREUM_CHAIN_ID=1
-SPOKE_ETHEREUM_RPC_URL=https://virtual.mainnet.eu.rpc.tenderly.co/2952ce37-16d2-46f8-b196-3a65c969372a
-SPOKE_ETHEREUM_ADMIN_RPC_URL=
+SPOKE_BASE_CHAIN_ID=8453
+SPOKE_BASE_RPC_URL=http://127.0.0.1:9545
+SPOKE_BASE_ADMIN_RPC_URL=
 SPOKE_BSC_CHAIN_ID=56
 SPOKE_BSC_RPC_URL=https://virtual.binance.eu.rpc.tenderly.co/b6772c9b-23b5-42c5-a5e6-eda3969b5711
 SPOKE_BSC_ADMIN_RPC_URL=
@@ -63,8 +60,8 @@ PROVER_STORE_KIND=json
 
 NEXT_PUBLIC_HUB_RPC_URL=http://127.0.0.1:8545
 NEXT_PUBLIC_SPOKE_RPC_URL=http://127.0.0.1:9545
-NEXT_PUBLIC_HUB_CHAIN_ID=8453
-NEXT_PUBLIC_SPOKE_CHAIN_ID=480
-NEXT_PUBLIC_SPOKE_NETWORK=worldchain
+NEXT_PUBLIC_HUB_CHAIN_ID=1
+NEXT_PUBLIC_SPOKE_CHAIN_ID=8453
+NEXT_PUBLIC_SPOKE_NETWORK=base
 NEXT_PUBLIC_RELAYER_API_URL=http://127.0.0.1:3040
 NEXT_PUBLIC_INDEXER_API_URL=http://127.0.0.1:3030
