test(e2e): align fork defaults and docs to base hub

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "test:e2e:fork": "node ./scripts/e2e-fork.mjs",
+    "test:e2e:base-hub-supply": "node ./scripts/e2e-base-hub-supply.mjs",
     "test:e2e:base-mainnet-supply": "node ./scripts/e2e-base-mainnet-supply.mjs",
     "test:e2e:live:base-world-bsc": "node ./scripts/e2e-live-base-world-bsc.mjs",
-    "test:e2e": "pnpm test:e2e:base-mainnet-supply && pnpm test:e2e:fork",
+    "test:e2e": "pnpm test:e2e:base-hub-supply && pnpm test:e2e:fork",
     "format": "turbo run format",
     "contracts:test": "cd contracts && forge test -vvv",
     "contracts:build": "cd contracts && forge build",
